--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
           <id>jitpack.io</id>
           <url>https://jitpack.io</url>
       </repository>
+      <repository>
+          <id>minecraft-repo</id>
+          <url>https://libraries.minecraft.net/</url>
+      </repository>
   </repositories>
 
   <dependencies>
@@ -75,6 +79,12 @@
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
           <version>1.18.28</version>
+      </dependency>
+      <dependency>
+          <groupId>com.mojang</groupId>
+          <artifactId>authlib</artifactId>
+          <version>1.5.25</version>
+          <scope>provided</scope>
       </dependency>
   </dependencies>
 </project>
